# libsf

./: .gitignore  CMakeLists.txt  README.md  libsfConfig.h.in
.claude/: settings.local.json
src/: CMakeLists.txt  osRelated.h  sfDebug.h  sfMessages.h  sfMutex.h  sfState.h  sfTask.h  sfThread.h  sfThreadBase.h  sfThread_epoll.h  sfThread_select.h  sfTimer.h  winSockPair.h
tex/: CMakeLists.txt  CmakeLists.txt
tex/debugCheck/: CMakeLists.txt  debugCheckMain.cpp  makefile
tex/messagePong/: CMakeLists.txt  makefile  task1.cpp  task1.h  task2.cpp  task2.h  taskMain.cpp
tex/multiTask/: CMakeLists.txt  makefile  task.cpp  task.h  taskChkMain.cpp
tex/stateCheck/: CMakeLists.txt  makefile  stateCheckMain.cpp  stateTask.cpp  stateTask.h  userMessages.h
tex/timerCheck/: CMakeLists.txt  makefile  timerCheckMain.cpp  timerTask.cpp  timerTask.h
